--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,13 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: java version test
+        run: java -version
+      - name: python version test
+        run: pyton -v
+      - name: maven version
+        run: mvn --version
+      - name: git version
+        run: git --version
+      
+      
